--- a/src/components/css/MainMenu.css
+++ b/src/components/css/MainMenu.css
@@ -22,32 +22,24 @@
   height: 100%;
 }
 
-.menu-options{
 
-  padding:50px;
-  width:28%;
-  margin: 20px;
-  border-radius: 5px;
-  background-color: white;
-}
+
 
 @media only screen and (max-width: 400px) {
   .MainMenu{
     width: 100%;
-    height:90em;
+    height:auto;
     right:0;
     float:none;
     position: relative;
     display: block;
     padding: 10px;
+    margin-bottom: 40px;
   }
 
   .menu-container{
     top:0;
-  }
-
-  .menu-options {
-
+    width: 100%;
   }
 
 }
