--- a/src/components/css/SubMenu.css
+++ b/src/components/css/SubMenu.css
@@ -10,3 +10,12 @@
   overflow-y: auto;
   padding: 20px;
 }
+
+@media only screen and (max-width: 425px) {
+  .SubMenu{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 40px;
+    position: relative;
+  }
+}
