--- a/src/components/css/Switch.css
+++ b/src/components/css/Switch.css
@@ -6,8 +6,12 @@
   padding:5px;
 }
 
-.switch label{
+.mySwitch #name{
   display:inline-block;
+  position: relative;
+  top:-15px;
+  margin:auto;
+  padding: 5px;
 }
 
 .switch input {display:none;}
