fixed main menu in all sizes, added css from design

--- a/src/components/css/MainCard.css
+++ b/src/components/css/MainCard.css
@@ -1,14 +1,15 @@
 .menu-options{
-  padding:50px;
+  padding:40px;
   width:28%;
-  margin: 20px;
+  margin: 15px;
   border-radius: 5px;
   background-color: white;
-  -webkit-box-shadow: 5px 4px 5px 1px rgba(0,0,0,0.55);
--moz-box-shadow: 5px 4px 5px 1px rgba(0,0,0,0.55);
-box-shadow: 5px 4px 5px 1px rgba(0,0,0,0.55);
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
+  box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
 text-decoration: none;
-color: black;
+color: #081d38;
+font-family: 'Oswald', sans-serif;
 }
 
 .menu-options:hover{
@@ -18,17 +19,85 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 }
 
 .menu-options img{
-  height:50px;
+  height:70px;
+  float : right;
+  display: inline-block;
+  width:40%;
+  padding:5px;
+  margin-left: 10px;
+  vertical-align: middle;
+  margin-top: 10px;
 }
+
+.menu-options h1{
+  float:left;
+  width:50%;
+  font-size: 30px;
+  font-weight: lighter;
+  height:100%;
+  font-family: 'Exo', sans-serif;
+}
+
+@media only screen and (max-width: 1024px) {
+  .menu-options{
+    width: 29%;
+    min-height: 300px;
+  }
+  .menu-options h1{
+
+
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .menu-options{
+    width: 42%;
+    display: inline-block;
+    min-height: 300px;
+  }
+
+  .menu-options img{
+    height: 50px;
+    width:50px;
+    float: none;
+  }
+
+  .menu-options h1{
+    float:none;
+    width: auto;
+    font-size: 20px;
+  }
+}
+
+
+
 
 @media only screen and (max-width: 425px) {
   .menu-options{
     width: 90%;
     margin:12px;
     margin-left: 14px;
-    padding:10px;
+    padding:5px;
+    text-align: center;
+
   }
+.menu-options h2{
+  font-size: 20px;
+}
+
   .menu-options img{
-    height: 30px;
+    height: 50px;
+    width:50px;
+    float: none;
   }
+
+  .menu-options h1{
+    float:none;
+    width: auto;
+    font-size: 20px;
+  }
+
+
+
 }
