--- a/src/components/css/Switch.css
+++ b/src/components/css/Switch.css
@@ -23,7 +23,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #081d38;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -41,7 +41,7 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: green;
 }
 
 input:focus + .slider {
