--- a/src/components/css/SubMenu.css
+++ b/src/components/css/SubMenu.css
@@ -2,14 +2,34 @@
   width: 95%;
   height:100%;
   right:0;
-  background-color: #00C853;
+  background-color: #d3d4d4;
   margin: 0 auto;
   position: fixed;
   text-align: center;
   vertical-align: middle;
   overflow-y: auto;
   padding: 20px;
+  padding-top: 5px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .SubMenu{
+    width: 92%;
+  }
+
+  .menu-container{
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .SubMenu{
+    width: 90%;
+  }
+}
+
+
+
 
 @media only screen and (max-width: 425px) {
   .SubMenu{
