--- a/src/components/css/SubCard.css
+++ b/src/components/css/SubCard.css
@@ -12,12 +12,23 @@ color: #081d38;
 font-family: 'Oswald', sans-serif;
 }
 
-.sub-card-down{
-
-  }
+.elec{
+  width:95%;
+  padding:40px;
+  margin: 15px;
+  border-radius: 5px;
+  background-color: white;
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
+  box-shadow: 5px 5px 5px 0px rgba(8,29,56,1);
+text-decoration: none;
+color: #081d38;
+font-family: 'Oswald', sans-serif;
+}
 
 .sub-card-image{
-
+  height:50px;
+  width:50px;
 }
 
 .updown{
@@ -28,23 +39,34 @@ font-family: 'Oswald', sans-serif;
   margin: auto;
 }
 
-.sub-options:hover{
+.sub-options:hover , .elec:hover{
   -webkit-box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 -moz-box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 }
 
-.sub-options img{
-  height:50px;
+.stove{
+  border-radius: 50%;
+  padding:10px;
+  color:white;
+  background-color: #081d38;
+  height:auto;
+  width:20%;
+  margin:10px;
+  display:inline-block;
+}
 
-  width:50px;
+.card-image{
+  height:100px;
+
+  width:100px;
   padding:5px;
   margin-left: 10px;
   vertical-align: middle;
   margin-top: auto;
 }
 
-.sub-options h1{
+.sub-options h1 , .elec h1{
 
   width:50%;
   font-size: 30px;
@@ -56,31 +78,38 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 }
 
 @media only screen and (max-width: 1024px) {
-  .sub-options{
+  .sub-options, .elec{
     width: 45%;
     min-height: 300px;
   }
-  .sub-options h1{
+  .sub-options h1 , .elec h1{
 
 
     font-size: 20px;
   }
+
 }
 
 @media only screen and (max-width: 768px) {
-  .sub-options{
+  .sub-options {
     width: 42%;
     display: inline-block;
     min-height: 300px;
   }
 
-  .sub-options img{
+  .elec {
+    width: 90%;
+    display: inline-block;
+    min-height: 300px;
+  }
+
+  .sub-options img , .elec img{
     height: 50px;
     width:50px;
     float: none;
   }
 
-  .sub-options h1{
+  .sub-options h1 , .elec h1{
     float:none;
     width: auto;
     font-size: 20px;
@@ -91,7 +120,7 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
 
 
 @media only screen and (max-width: 425px) {
-  .sub-options{
+  .sub-options , .elec{
     width: 90%;
     margin:12px;
     margin-left: 14px;
@@ -99,17 +128,17 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
     text-align: center;
     min-height: 150px;
   }
-.sub-options h2{
+.sub-options h2 , .elec h2{
   font-size: 20px;
 }
 
-  .sub-options img{
+  .sub-options img , .elec img{
     height: 50px;
     width:50px;
     float: none;
   }
 
-  .sub-options h1{
+  .sub-options h1 , .elec h1{
     float:none;
     width: auto;
     font-size: 20px;
