--- a/src/components/css/MainCard.css
+++ b/src/components/css/MainCard.css
@@ -22,7 +22,7 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
   height:70px;
   float : right;
   display: inline-block;
-  width:40%;
+  width:70px;
   padding:5px;
   margin-left: 10px;
   vertical-align: middle;
