--- a/src/components/css/SubMenu.css
+++ b/src/components/css/SubMenu.css
@@ -34,8 +34,13 @@
 @media only screen and (max-width: 425px) {
   .SubMenu{
     width: 100%;
+
     padding: 10px;
     margin-bottom: 40px;
     position: relative;
+  }
+
+  .SubMenu h1{
+    font-size: 30px;
   }
 }
