--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   font-family: 'Patua One', cursive;
   background-color: #444;
-  background: url(https://newevolutiondesigns.com/images/freebies/abstract-background-20.jpg);
+  background-color: #5C6BC0;
   background-size: 100%;
   background-repeat: no-repeat;
 }
