--- a/src/components/css/SubCard.css
+++ b/src/components/css/SubCard.css
@@ -175,11 +175,11 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
     font-size: 20px;
   }
 
-.onecard{
-  min-height: 100%;
-}
-.onecard img{
-  max-height: 100px;
+  .map{
+    max-height: 100px;
+    max-width: 80px;
+    height: 80px;
+  }
 
-}
+
 }
