--- a/src/components/css/SubCard.css
+++ b/src/components/css/SubCard.css
@@ -76,7 +76,7 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
   color:white;
   background-color: #081d38;
   height:auto;
-  width:20%;
+  width:200px;
   margin:10px;
   display:inline-block;
 }
@@ -126,6 +126,12 @@ box-shadow: 5px 4px 5px 1px rgba(122,118,122,1);
     width: 42%;
     display: inline-block;
     min-height: 300px;
+  }
+
+  .map{
+    max-height: 240px;
+    max-width: 200px;
+    height: 200px;
   }
 
   .elec {
